== In Git

=== Bugfixes
* PDF formatter renders tables incorrectly (#553 Andy Waite)
* Better colouring in HTML report (Rob Aldred)

== 0.6.1 2010-01-03

=== Bugfixes
* Fixed broken console handling on Windows/JRuby that was introduced in 0.6.0. (Aslak Hellesøy)

== 0.6.0 2010-01-03

Bumping to 0.6.0 for this release since we're breaking backwards compatibility with tags.

=== Changed Features
* Tag boolean logic is inverted. What was ORed before is now ANDed and vice versa. (#504 Aslak Hellesøy)
  This makes it more practical in most cases to mix tags from profiles and the command line

  In previous versions the following command line:
  
    --tags @foo,~@bar --tags @zap (on the command line)
  
  or the following Hook:
  
    Before("@foo,~@bar", "@zap") (for Hooks)
  
  would be equivalent to the boolean expression:       (@foo && !@bar) || @zap
  Starting with this release it will be equivalent to: (@foo || !@bar) && @zap

=== Bugfixes
* Cucumber not loading the correct settings using autospec (#496, #523 Aslak Hellesøy, Andrzej Śliwa)
* Ruby 1.9.2 fails to load features/support/env.rb (#549 Aslak Hellesøy)
* All features (except 4) pass on 1.9.2 (but not on 1.9.1) (Aslak Hellesøy)
* Add missing require statement in rerun formatter which broke RubyMine (Noah Sussman)

== 0.5.3 2009-12-22

Another small release today to please a sister project. This time Cuke4Nuke.

=== New Features
* Simplified wire protocol to mostly use success / fail responses (Matt Wynne)

== 0.5.2 2009-12-22

=== New Features
* On JRuby/Cuke4Duke, --require DIR will put DIR on the $CLASSPATH, making it easier to load step def classes (Aslak Hellesøy)
* New --jars option that will load jar files. Only available on JRuby. Practical for Cuke4Duke. (Aslak Hellesøy)

=== Bugfixes
* Add #embed back to html formatter (#547 Brandon Faloona)
* Refactored wire protocol code and added configurable timeout to allow for long running step definitions. (#546 Matt Wynne)

== 0.5.1 2009-12-16
