@@ -6,7 +6,7 @@ Cucumber::Rake::Task.new do |t|
   if(ENV["RUN_CODE_RUN"])
     t.profile = 'run_code_run'
   elsif(Cucumber::JRUBY)
-    t.profile = 'jruby'
+    t.profile = Cucumber::WINDOWS ? 'jruby_win' : 'jruby'
   elsif(Cucumber::WINDOWS_MRI)
     t.profile = 'windows_mri'
   elsif(Cucumber::RUBY_1_9)
