@@ -1,18 +1,10 @@
 # Require this file if you need Unicode support.
+# Tips for improvement - esp. ruby 1.9: http://www.ruby-forum.com/topic/184730
 require 'cucumber/platform'
 require 'cucumber/formatter/ansicolor'
 $KCODE='u' unless Cucumber::RUBY_1_9
 
-# Tips for improvement - esp. ruby 1.9: http://www.ruby-forum.com/topic/184730
 if Cucumber::WINDOWS
-  if Cucumber::WINDOWS_MRI
-    Cucumber::CODEPAGE = "cp#{Win32::Console::OutputCP()}"
-  elsif `cmd /c chcp` =~ /(\d+)/
-    Cucumber::CODEPAGE = "cp#{$1.to_i}"
-  else
-    raise "Cucumber couldn't detect the output codepage"
-  end
-
   require 'iconv'
 
   module Cucumber
@@ -23,7 +15,11 @@ if Cucumber::WINDOWS
           def print(*a)
             begin
               cucumber_print(*Iconv.iconv(Cucumber::CODEPAGE, "UTF-8", *a.map{|a|a.to_s}))
-            rescue Iconv::IllegalSequence
+            rescue Iconv::InvalidEncoding => e
+              STDERR.cucumber_puts("WARNING: #{e.message}")
+              cucumber_print(*a)
+            rescue Iconv::IllegalSequence => e
+              STDERR.cucumber_puts("WARNING: #{e.message}")
               cucumber_print(*a)
             end
           end
@@ -32,7 +28,11 @@ if Cucumber::WINDOWS
           def puts(*a)
             begin
               cucumber_puts(*Iconv.iconv(Cucumber::CODEPAGE, "UTF-8", *a.map{|a|a.to_s}))
-            rescue Iconv::IllegalSequence
+            rescue Iconv::InvalidEncoding => e
+              STDERR.cucumber_print("WARNING: #{e.message}")
+              cucumber_print(*a)
+            rescue Iconv::IllegalSequence => e
+              STDERR.cucumber_puts("WARNING: #{e.message}")
               cucumber_puts(*a)
             end
           end
@@ -43,5 +43,16 @@ if Cucumber::WINDOWS
       STDOUT.extend(self)
       STDERR.extend(self)
     end
+  end
+
+  if ENV['CUCUMBER_OUTPUT_ENCODING']
+    Cucumber::CODEPAGE = ENV['CUCUMBER_OUTPUT_ENCODING']
+  elsif Cucumber::WINDOWS_MRI
+    Cucumber::CODEPAGE = "cp#{Win32::Console::OutputCP()}"
+  elsif `cmd /c chcp` =~ /(\d+)/
+    Cucumber::CODEPAGE = "cp#{$1.to_i}"
+  else
+    STDERR.cucumber_puts("WARNING: Couldn't detect your output codepage. Assuming it is 1252. You may have to chcp 1252.")
+    Cucumber::CODEPAGE = "cp1252"
   end
 end
